--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="chat-container">
         <div class="chat-message bot">
             <p><strong>Навигация</strong></p>
-            <pre><code><span class="comment">from playwright.async_api import Page</span>
+            <pre><code>
 
 <span class="comment">async def navigate_to_url(page: Page, url: str):</span>
     await page.goto(url) #Переход по указанному URL.
