--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="chat-container">
+        <h1>Playwright Code Snippets</h1>
         <div class="chat-message bot">
             <p><strong>Навигация</strong></p>
             <pre><code>
