--- a/index.html
+++ b/index.html
@@ -96,5 +96,7 @@
             </code></pre>
         </div>
     </div>
+    <!-- Подключаем внешний файл скрипта -->
+    <script src="scroll.js"></script>
 </body>
 </html>
