--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Шпаргалка Playwright</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body onscroll="disableScrolling()"
+      onmousewheel="enableScrolling()"
+      onclick="enableScrolling()"
+      onmousemove="enableScrolling()">
     <div class="chat-container">
         <h1>Playwright Code Snippets</h1>
         <div class="chat-message bot">
