--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <title>Шпаргалка Playwright</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body onscroll="disableScrolling()"
-      onmousewheel="enableScrolling()"
-      onclick="enableScrolling()"
-      onmousemove="enableScrolling()">
+<body>
     <div class="chat-container">
         <h1>Playwright Code Snippets</h1>
         <div class="chat-message bot">
