--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@
             </code></pre>
         </div>
     </div>
-    
+    <pre class="code-container">
+        <code>
+# Пример Python кода
+def hello_world():
+    print("Hello, world!")
+        </code>
+        <button class="copy-button" aria-label="Copy code">&#128203;</button> <!-- Иконка копирования -->
+    </pre>
+
+    <script src="script.js"></script>
 </body>
 </html>
