--- a/index.html
+++ b/index.html
@@ -1,108 +1,184 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Шпаргалка Playwright</title>
+    <title>Playwright Code Snippets</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="chat-container">
-        <h1>Playwright Code Snippets</h1>
-        <div class="chat-message bot">
-            <p><strong>Навигация</strong></p>
-            <pre><code>
 
-<span class="copy-span" data-tooltip="Copied!" class="comment">async def navigate_to_url(page: Page, url: str):
-    await page.goto(url) #Переход по указанному URL.</span><br>
+    <h2>Playwright Code Snippets</h2>
+    
+    <h3>Навигация</h3>
 
-<span class="copy-span" data-tooltip="Copied!" class="comment">async def reload_page(page: Page):
-    await page.reload() #Перезагрузка текущей страницы.</span><br>
-
-<span class="copy-span" data-tooltip="Copied!" class="comment">async def go_back(page: Page):
-    await page.go_back() #Переход на предыдущую страницу в истории.</span><br>
-
-<span class="copy-span" data-tooltip="Copied!" class="comment">async def go_forward(page: Page):
-    await page.go_forward() #Переход на следующую страницу в истории.</span><br>
-            </code></pre>
-        </div>
-
-        <div class="chat-message bot">
-            <p><strong>Работа с элементами</strong></p>
-            <pre><code>
-<span cclass="copy-span" data-tooltip="Copied!" lass="comment">async def click_element(page: Page, selector: str):
-    await page.click(selector) #Клик по элементу, определённому селектором.</span><br>
-
-<span class="copy-span" data-tooltip="Copied!" class="comment">async def type_text(page: Page, selector: str, text: str):
-    await page.type(selector, text) #Ввод текста в поле ввода.</span><br>
-
-<span class="copy-span" data-tooltip="Copied!" class="comment">async def press_key(page: Page, selector: str, key: str):
-    await page.press(selector, key) #Нажатие клавиши в поле ввода.</span><br>
-
-<span class="copy-span" data-tooltip="Copied!" class="comment">async def get_text_content(page: Page, selector: str) -> str:
-    return await page.text_content(selector) #Получение текстового содержимого элемента.</span><br>
-
-<span class="copy-span" data-tooltip="Copied!" class="comment">async def select_option(page: Page, selector: str, label: str):</span><br>
-    await page.select_option(selector, label=label) #Выбор опции в раскрывающемся списке по метке.
-
-<span class="copy-span" data-tooltip="Copied!" class="comment">async def wait_for_element(page: Page, selector: str, state: str):
-    await page.wait_for_selector(selector, state=state)    #Ожидание появления или видимости элемента.</span><br>
-
-<span class="copy-span" data-tooltip="Copied!" class="comment">async def check_element_visibility(page: Page, selector: str):
-    assert await page.locator(selector).is_visible()    #Проверка, существует ли элемент и виден ли он.</span><br>
-
-<span class="copy-span" data-tooltip="Copied!" class="comment">async def check_page_title(page: Page, expected_title: str):
-    assert await page.title() == expected_title    #Проверка заголовка страницы.</span><br>
-            </code></pre>
-        </div>
-
-        <div class="chat-message bot">
-            <p><strong>Клавиатура и мышь</strong></p>
-            <pre><code>
-<span class="copy-span" data-tooltip="Copied!" class="comment">async def type_text_in_input(page: Page, selector: str, text: str):
-    await page.type(selector, text)    #Ввести текст в поле ввода.</span><br>
-
-<span class="copy-span" data-tooltip="Copied!" class="comment">async def press_key_on_keyboard(page: Page, key: str):
-    await page.keyboard.press(key)    #Нажать клавишу на клавиатуре.</span><br>
-
-<span class="copy-span" data-tooltip="Copied!" class="comment">async def release_key_on_keyboard(page: Page, key: str):
-    await page.keyboard.release(key)    #Отпустить клавишу на клавиатуре.</span><br>
-
-<span class="copy-span" data-tooltip="Copied!" class="comment">async def move_mouse_and_click(page: Page, x: int, y: int):
-    await page.mouse.move(x, y)
-    await page.mouse.click()    #Передвинуть мышь в указанную позицию и кликнуть.</span><br>
-            </code></pre>
-        </div>
-
-        <div class="chat-message bot">
-            <p><strong>Выполнение (eval) Javascript-кода</strong></p>
-            <pre><code>
-<span class="copy-span" data-tooltip="Copied!" class="comment">async def evaluate_js(page: Page, js_code: str):
-    return await page.evaluate(js_code)    #Выполнить JavaScript-код в контексте страницы.</span><br>
-            </code></pre>
-        </div>
-
-        <div class="chat-message bot">
-            <p><strong>Фреймы</strong></p>
-            <pre><code>
-<span class="copy-span" data-tooltip="Copied!" class="comment">async def get_frame_by_name(page: Page, name: str):
-    return await page.frame(name=name)    #Получить фрейм по имени.</span><br>
-
-<span class="copy-span" data-tooltip="Copied!" class="comment">async def get_frame_by_index(page: Page, index: int):
-    return await page.frame(index=index)    #Получить фрейм по индексу.</span><br>
-
-<span class="copy-span" data-tooltip="Copied!" class="comment">async def evaluate_js_in_frame(frame, js_code: str):
-    await frame.evaluate(js_code)    #Выполнить JavaScript-код в контексте фрейма.</span><br>
-            </code></pre>
-        </div>
-    </div>
     <pre class="code-container">
         <code>
-# Пример Python кода
-def hello_world():
-    print("Hello, world!")
+async def navigate_to_url(page: Page, url: str):
+    await page.goto(url)  # Переход по указанному URL.
         </code>
-        <button class="copy-button" aria-label="Copy code">&#128203;</button> <!-- Иконка копирования -->
+        <button class="copy-button" aria-label="Copy code">&#128203;</button>
+    </pre>
+
+    <pre class="code-container">
+        <code>
+async def reload_page(page: Page):
+    await page.reload()  # Перезагрузка текущей страницы.
+        </code>
+        <button class="copy-button" aria-label="Copy code">&#128203;</button>
+    </pre>
+
+    <pre class="code-container">
+        <code>
+async def go_back(page: Page):
+    await page.go_back()  # Переход на предыдущую страницу в истории.
+        </code>
+        <button class="copy-button" aria-label="Copy code">&#128203;</button>
+    </pre>
+
+    <pre class="code-container">
+        <code>
+async def go_forward(page: Page):
+    await page.go_forward()  # Переход на следующую страницу в истории.
+        </code>
+        <button class="copy-button" aria-label="Copy code">&#128203;</button>
+    </pre>
+
+    <h3>Работа с элементами</h3>
+
+    <pre class="code-container">
+        <code>
+async def click_element(page: Page, selector: str):
+    await page.click(selector)  # Клик по элементу, определённому селектором.
+        </code>
+        <button class="copy-button" aria-label="Copy code">&#128203;</button>
+    </pre>
+
+    <pre class="code-container">
+        <code>
+async def type_text(page: Page, selector: str, text: str):
+    await page.type(selector, text)  # Ввод текста в поле ввода.
+        </code>
+        <button class="copy-button" aria-label="Copy code">&#128203;</button>
+    </pre>
+
+    <pre class="code-container">
+        <code>
+async def press_key(page: Page, selector: str, key: str):
+    await page.press(selector, key)  # Нажатие клавиши в поле ввода.
+        </code>
+        <button class="copy-button" aria-label="Copy code">&#128203;</button>
+    </pre>
+
+    <pre class="code-container">
+        <code>
+async def get_text_content(page: Page, selector: str) -> str:
+    return await page.text_content(selector)  # Получение текстового содержимого элемента.
+        </code>
+        <button class="copy-button" aria-label="Copy code">&#128203;</button>
+    </pre>
+
+    <pre class="code-container">
+        <code>
+async def select_option(page: Page, selector: str, label: str):
+    await page.select_option(selector, label=label)  # Выбор опции в раскрывающемся списке по метке.
+        </code>
+        <button class="copy-button" aria-label="Copy code">&#128203;</button>
+    </pre>
+
+    <pre class="code-container">
+        <code>
+async def wait_for_element(page: Page, selector: str, state: str):
+    await page.wait_for_selector(selector, state=state)  # Ожидание появления или видимости элемента.
+        </code>
+        <button class="copy-button" aria-label="Copy code">&#128203;</button>
+    </pre>
+
+    <pre class="code-container">
+        <code>
+async def check_element_visibility(page: Page, selector: str):
+    assert await page.locator(selector).is_visible()  # Проверка, существует ли элемент и виден ли он.
+        </code>
+        <button class="copy-button" aria-label="Copy code">&#128203;</button>
+    </pre>
+
+    <pre class="code-container">
+        <code>
+async def check_page_title(page: Page, expected_title: str):
+    assert await page.title() == expected_title  # Проверка заголовка страницы.
+        </code>
+        <button class="copy-button" aria-label="Copy code">&#128203;</button>
+    </pre>
+
+    <h3>Клавиатура и мышь</h3>
+
+    <pre class="code-container">
+        <code>
+async def type_text_in_input(page: Page, selector: str, text: str):
+    await page.type(selector, text)  # Ввести текст в поле ввода.
+        </code>
+        <button class="copy-button" aria-label="Copy code">&#128203;</button>
+    </pre>
+
+    <pre class="code-container">
+        <code>
+async def press_key_on_keyboard(page: Page, key: str):
+    await page.keyboard.press(key)  # Нажать клавишу на клавиатуре.
+        </code>
+        <button class="copy-button" aria-label="Copy code">&#128203;</button>
+    </pre>
+
+    <pre class="code-container">
+        <code>
+async def release_key_on_keyboard(page: Page, key: str):
+    await page.keyboard.release(key)  # Отпустить клавишу на клавиатуре.
+        </code>
+        <button class="copy-button" aria-label="Copy code">&#128203;</button>
+    </pre>
+
+    <pre class="code-container">
+        <code>
+async def move_mouse_and_click(page: Page, x: int, y: int):
+    await page.mouse.move(x, y)
+    await page.mouse.click()  # Передвинуть мышь в указанную позицию и кликнуть.
+        </code>
+        <button class="copy-button" aria-label="Copy code">&#128203;</button>
+    </pre>
+
+    <h3>Выполнение (eval) Javascript-кода</h3>
+
+    <pre class="code-container">
+        <code>
+async def evaluate_js(page: Page, js_code: str):
+    return await page.evaluate(js_code)  # Выполнить JavaScript-код в контексте страницы.
+        </code>
+        <button class="copy-button" aria-label="Copy code">&#128203;</button>
+    </pre>
+
+    <h3>Фреймы</h3>
+
+    <pre class="code-container">
+        <code>
+async def get_frame_by_name(page: Page, name: str):
+    return await page.frame(name=name)  # Получить фрейм по имени.
+        </code>
+        <button class="copy-button" aria-label="Copy code">&#128203;</button>
+    </pre>
+
+    <pre class="code-container">
+        <code>
+async def get_frame_by_index(page: Page, index: int):
+    return await page.frame(index=index)  # Получить фрейм по индексу.
+        </code>
+        <button class="copy-button" aria-label="Copy code">&#128203;</button>
+    </pre>
+
+    <pre class="code-container">
+        <code>
+async def evaluate_js_in_frame(frame, js_code: str):
+    await frame.evaluate(js_code)  # Выполнить JavaScript-код в контексте фрейма.
+        </code>
+        <button class="copy-button" aria-label="Copy code">&#128203;</button>
     </pre>
 
     <script src="script.js"></script>
